--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<html>
+
 <head>
   <meta charset="UTF-8" />
   <title>Karthik Bhattaram</title>
 </head>
 
+<body>
+    <h1>I'm a student at UCSB</h1>
+</body>
 
 </html>
