Make basic webpage

--- a/index.html
+++ b/index.html
@@ -1,15 +1,105 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE HTML>
+<!--
+	Story by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
+	<head>
+		<title>Karthik Bhattaram</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Karthik Bhattaram</title>
-</head>
+		<!-- Wrapper -->
+			<div id="wrapper" class="divided">
 
-<body>
-    <h1>I'm a student at UCSB</h1>
-</body>
+				<!-- One -->
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
+							<h1>Karthik Bhattaram</h1>
+							<p class="major">I'm a third year computer science major at UC Santa Barbara looking for Summer 2025 internships. </a></p>
+							<ul class="actions stacked">
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Heading down...</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/henley-gate.jpg" alt="" />
+						</div>
+					</section>
 
+				<!-- Two -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Network Security</h2>
+							<p>I have a certificate from <a href="https://www.deanza.edu/">De Anza College</a> in network security and my internships at <a href="https://axiado.com/">Axiado</a> involved creating packet flows to test a network security chip. </p>
+
+						</div>
+						<div class="image">
+							<img src="images/osi-model.png" alt="" />
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Computer Architecture</h2>
+							<p>My work at <a href="https://cadence.com/">Cadence Design Systems</a> involved creating an automation tool for assembling together foundry-provided memories. I also have experience with programming in CUDA C/C++ for the <a href="https://www.nvidia.com/en-us/data-center/a100/">Nvidia A100</a> from when I worked at <a href="https://www.eyesopen.com/">OpenEye Scientific</a>. </p>
+
+						</div>
+						<div class="image">
+							<img src="images/nvidia-a100.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Four -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Data Science</h2>
+							<p>I have a <a href="https://www.coursera.org/account/accomplishments/verify/2XRKDHSHNLRP?">certificate</a> in Python and Data Science, and I am minoring in statistics. I worked on data science based analysis of molecule collections when I interned at <a href="https://www.eyesopen.com/">OpenEye Scientific</a>. </p>
+
+						</div>
+						<div class="image">
+							<img src="images/python-lang-img.webp" alt="" />
+						</div>
+					</section>
+
+				<!-- Five -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Documents</h2>
+							<p> You can download my resume <a href="assets/pdf/Karthik_Bhattaram_Resume.pdf">here</a> and my network security certificate <a href="assets/pdf/cert.pdf">here</a>. </p>
+
+						</div>
+					</section>
+
+
+				<!-- Footer -->
+					<footer class="wrapper style1 align-center">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://www.instagram.com/karthikbhattaram/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.linkedin.com/in/karthik-bhattaram-7640a528a/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/KarthikB-dev" class="icon brands style2 fa-github"><span class="label">Instagram</span></a></li>
+								<li><a href="mailto:karthik.bhattaram.1@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+							<p> Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
