Add document icon

--- a/index.html
+++ b/index.html
@@ -68,11 +68,14 @@
 					</section>
 
 				<!-- Five -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Documents</h2>
 							<p> You can download my resume <a href="assets/pdf/Karthik_Bhattaram_Resume.pdf">here</a> and my network security certificate <a href="assets/pdf/cert.pdf">here</a>. </p>
 
+						</div>
+						<div class="image">
+							<img src="images/document-icon.jpg" alt="" />
 						</div>
 					</section>
 
