Improve organization by moving cert link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Network Security</h2>
-							<p>I have a certificate from <a href="https://www.deanza.edu/">De Anza College</a> in network security and my internships at <a href="https://axiado.com/">Axiado</a> involved creating packet flows to test a network security chip. </p>
+							<p>I have a <a href="assets/pdf/cert.pdf">certificate</a> in network security and my internships at <a href="https://axiado.com/">Axiado</a> involved creating packet flows to test a network security system-on-chip. </p>
 
 						</div>
 						<div class="image">
@@ -70,8 +70,8 @@
 				<!-- Five -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Documents</h2>
-							<p> You can download my resume <a href="assets/pdf/Karthik_Bhattaram_Resume.pdf">here</a> and my network security certificate <a href="assets/pdf/cert.pdf">here</a>. </p>
+							<h2>Resume</h2>
+							<p> You can download my resume <a href="assets/pdf/Karthik_Bhattaram_Resume.pdf">here</a>. </p>
 
 						</div>
 						<div class="image">
