--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 						</div>
 						<div class="image">
-							<img src="images/resume-icon.jpg" alt="" />
+							<img src="images/document-icon.jpg" alt="" />
 						</div>
 					</section>
 
