Change netsec cert link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Network Security</h2>
-							<p>I have a <a href="assets/pdf/cert.pdf">certificate</a> in network security and my internships at <a href="https://axiado.com/">Axiado</a> involved creating packet flows to test a network security system-on-chip. </p>
+							<p>I have a <a href="https://www.parchment.com/u/award/c8098413a59e9894b573276d949cf946">certificate</a> in network security and my internships at <a href="https://axiado.com/">Axiado</a> involved creating packet flows to test a network security system-on-chip. </p>
 
 						</div>
 						<div class="image">
