--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Karthik Bhattaram</h1>
-							<p class="major">I'm a third year computer science major at UC Santa Barbara looking for Summer 2025 internships. </a></p>
+							<p class="major">Hi! I'm a third year computer science major at UC Santa Barbara looking for Summer 2025 internships. </a></p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Heading down...</a></li>
 							</ul>
